Update swagger docs to allow for proper bearer auth
