# internal/handlers/sessionhandler/get.go
@@ -11,8 +11,9 @@ import (
 // @Description Retrieves session information by its token
 // @Tags session
 // @Produce json
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Success 200 {object} map[string]string
+// @Failure 401 "Unauthorized"
 // @Router /auth/session [get]
 func (s *SessionController) Get(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"username": c.GetString("username")})
